# GRA-SubjectSwap

./: GRA-SubjectSwap.rar  LICENSE  README.md  paper-en.tex  paper-ru.tex  pyproject.toml  requirements.txt  setup.cfg
docs/: architecture.md  architecture_overview.md  gra_nullification.md  gra_nulling_math.md  manifesto.md  math.md  optimus_api.md  optimus_concept.md  optimus_math.md  subject_weights.md  swon.md
examples/art/: film_directing.md  interactive_installation.py  poem_swarm.md
examples/humanities/: education_orchestra.md  legal_swarm.md  philosophy_subjecthood.md  political_policy_sim.py
examples/optimus/: optimus_human_in_loop.py  optimus_minimal.py  optimus_simulated.py
examples/science_tech/: autonomous_lab.md  molecular_discovery.ipynb  robotic_orchestra.py
examples/toy/: multi_agent_swap.py  text_swap_demo.py
src/core/: agent.py  human.py  policy.py  swarm.py  weights.py
src/gra_subjectswap/: __init__.py
src/gra_subjectswap/core/: gra_nullifier.py  logging.py  policies.py  roles.py  subject_state.py  swap_engine.py
src/gra_subjectswap/optimus/: __init__.py  env.py  human_policy_optimus.py  optimus_swap_loop.py  robot_policy_optimus.py
src/gra_subjectswap/utils/: config_loader.py  metrics.py
src/utils/: dialog.py  nullifier.py
tests/: test_gra_nullifier.py  test_nullification.py  test_optimus_loop.py  test_policies.py  test_policy_swap.py  test_roles.py  test_subject_weights.py  test_swap_engine.py  test_weights_optimization.py
