[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gra-subjectswap"
version = "0.1.0"
description = "Framework for human-agent subjectness swapping"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pyyaml",
    "numpy",
]
